<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dimen_40dp"
    android:paddingEnd="@dimen/dimen_40dp"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/tvIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/logo_label"
        android:textColor="@color/logo_red_color"
        android:textSize="@dimen/dimen_32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/onboarding_title_label"
        android:textColor="@color/black_color"
        android:textSize="@dimen/dimen_24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvPanLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvIcon"
        app:layout_constraintTop_toBottomOf="@id/tvIcon"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tvPanLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/pan_number_label"
        android:textColor="@color/text_fields_label"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textInputPan"
        app:layout_constraintStart_toStartOf="@id/textInputPan"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/pan_text_field_box_stroke_color"
        app:layout_constraintBottom_toTopOf="@id/tvBirthDateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPanLabel"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPanInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="10"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvBirthDateLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/birthdate_label"
        android:textColor="@color/text_fields_label"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textInputBirthDate"
        app:layout_constraintStart_toStartOf="@id/textInputPan"
        app:layout_constraintTop_toBottomOf="@id/textInputPan" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputBirthDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dimen_80dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textInputPan"
        app:layout_constraintTop_toBottomOf="@id/tvBirthDateLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputMonth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dimen_80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="@id/textInputBirthDate"
        app:layout_constraintStart_toEndOf="@id/textInputBirthDate"
        app:layout_constraintTop_toTopOf="@id/textInputBirthDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMonthInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputYear"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="@id/textInputMonth"
        app:layout_constraintEnd_toEndOf="@id/textInputPan"
        app:layout_constraintStart_toEndOf="@id/textInputMonth"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="@id/textInputMonth">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etYearInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDisclaimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_12dp"
        android:text="@string/disclaimer_label"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/primary_btn_label"
        android:textAllCaps="true"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintBottom_toTopOf="@id/tvIDoNotHavePAN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvIDoNotHavePAN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:padding="@dimen/dimen_8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/secondary_btn_label"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
